# hermes-mcp-lead-gen

./: README.md
examples/: report-sample.txt
prompts/: cron-prompt.txt  mcp-lead-scoring.md
truora-mcp-server/: .env.example  .gitignore  README.md  pyproject.toml
truora-mcp-server/truora_mcp_server/: __main__.py  client.py  server.py
