[project]
name = "truora-mcp-server"
version = "0.1.0"
description = "MCP server for Truora API — background checks & identity verification for LATAM"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
truora-mcp = "truora_mcp_server.server:main"

[dependency-groups]
dev = []